[package]

name = "microbench"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.3.0"

readme = "README.md"
license = "Apache-2.0"

description = "A micro-benchmarking library."

documentation = "https://kylemayes.github.io/microbench/microbench"
repository = "https://github.com/KyleMayes/microbench"

[features]

nightly = []

[dependencies]

clippy = { version = "0.0.*", optional = true }
