[package]

name = "microbench"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.3.2"

readme = "README.md"
license = "Apache-2.0"

description = "A micro-benchmarking library."

documentation = "https://docs.rs/microbench"
repository = "https://github.com/KyleMayes/microbench"

[features]

nightly = []
