[package]

edition = "2018"

name = "microbench"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.5.0"

readme = "README.md"
license = "Apache-2.0"

description = "A micro-benchmarking library."

documentation = "https://docs.rs/microbench"
repository = "https://github.com/KyleMayes/microbench"

keywords = ["bench", "benchmark", "microbenchmark"]

[features]

nightly = []
